# cpuminer-opt-aurum

./: Makefile.am  README.md  algo-gate-api.c  build-avx2.sh.txt  build-macos.sh  build-sse2.sh  miner.h
algo/aurum/: aurum-gate.c  aurum-gate.h
